--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -83,6 +83,12 @@
     <Compile Include="HomeControls\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
+    <Compile Include="HomeControls\ModelControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HomeControls\ModelControl.Designer.cs">
+      <DependentUpon>ModelControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="HomeControls\Shortcuts.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -175,6 +181,9 @@
     <EmbeddedResource Include="HomeControls\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HomeControls\ModelControl.resx">
+      <DependentUpon>ModelControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HomeControls\Shortcuts.resx">
       <DependentUpon>Shortcuts.cs</DependentUpon>
     </EmbeddedResource>
@@ -248,6 +257,7 @@
     <None Include="Resources\place_table.bmp" />
     <None Include="Resources\place_table2.png" />
     <None Include="Resources\place_tableTansperent.png" />
+    <None Include="Resources\PlusBtn.gif" />
     <Content Include="Resources\record.ico" />
     <Content Include="Resources\empty.ico" />
     <None Include="Resources\save-1.ico" />
