--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -110,6 +110,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="TablesDiagram\Helpers\LoadingHelper.cs" />
+    <Compile Include="TablesDiagram\Helpers\SelectorTool.cs" />
     <Compile Include="TablesDiagram\TablesDiagramComponents\FieldControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
