--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -77,6 +77,12 @@
       <DependentUpon>STSdb4Wizard.cs</DependentUpon>
     </Compile>
     <Compile Include="FormExtensions.cs" />
+    <Compile Include="HomeControls\ServerInstanceObject.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HomeControls\ServerInstanceObject.Designer.cs">
+      <DependentUpon>ServerInstanceObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="HomeControls\ServerInstancesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -196,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DbManager\Wizards\STSdb4Wizard.resx">
       <DependentUpon>STSdb4Wizard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HomeControls\ServerInstanceObject.resx">
+      <DependentUpon>ServerInstanceObject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeControls\ServerInstancesControl.resx">
       <DependentUpon>ServerInstancesControl.cs</DependentUpon>
