--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -77,11 +77,11 @@
       <DependentUpon>STSdb4Wizard.cs</DependentUpon>
     </Compile>
     <Compile Include="FormExtensions.cs" />
-    <Compile Include="HomeControls\ServerInstanceObject.cs">
+    <Compile Include="HomeControls\ServerInstanceControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HomeControls\ServerInstanceObject.Designer.cs">
-      <DependentUpon>ServerInstanceObject.cs</DependentUpon>
+    <Compile Include="HomeControls\ServerInstanceControl.Designer.cs">
+      <DependentUpon>ServerInstanceControl.cs</DependentUpon>
     </Compile>
     <Compile Include="HomeControls\ServerInstancesControl.cs">
       <SubType>UserControl</SubType>
@@ -203,8 +203,8 @@
     <EmbeddedResource Include="DbManager\Wizards\STSdb4Wizard.resx">
       <DependentUpon>STSdb4Wizard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HomeControls\ServerInstanceObject.resx">
-      <DependentUpon>ServerInstanceObject.cs</DependentUpon>
+    <EmbeddedResource Include="HomeControls\ServerInstanceControl.resx">
+      <DependentUpon>ServerInstanceControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeControls\ServerInstancesControl.resx">
       <DependentUpon>ServerInstancesControl.cs</DependentUpon>
