--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -191,11 +191,11 @@
     </Compile>
     <Compile Include="STSdbAdapter\STSParameter.cs" />
     <Compile Include="STSdbAdapter\STSSchema.cs" />
-    <Compile Include="TablesDiagram\TablesDiagramComponents\TablesSortWizard.cs">
+    <Compile Include="TablesDiagram\TablesDiagramComponents\SortTablesWizard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TablesDiagram\TablesDiagramComponents\TablesSortWizard.Designer.cs">
-      <DependentUpon>TablesSortWizard.cs</DependentUpon>
+    <Compile Include="TablesDiagram\TablesDiagramComponents\SortTablesWizard.Designer.cs">
+      <DependentUpon>SortTablesWizard.cs</DependentUpon>
     </Compile>
     <Compile Include="TablesDiagram\TablesDiagramPreview.cs">
       <SubType>UserControl</SubType>
@@ -256,8 +256,8 @@
     <EmbeddedResource Include="TablesDiagram\TablesDiagramComponents\PropertyForm.resx">
       <DependentUpon>PropertyForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TablesDiagram\TablesDiagramComponents\TablesSortWizard.resx">
-      <DependentUpon>TablesSortWizard.cs</DependentUpon>
+    <EmbeddedResource Include="TablesDiagram\TablesDiagramComponents\SortTablesWizard.resx">
+      <DependentUpon>SortTablesWizard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TablesDiagram\TablesDiagramPreview.resx">
       <DependentUpon>TablesDiagramPreview.cs</DependentUpon>
