--- a/STS.Workbench/STS.Workbench.csproj
+++ b/STS.Workbench/STS.Workbench.csproj
@@ -121,9 +121,21 @@
     <Compile Include="ServerControls\VerticalProgressBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="TablesDiagram\ChartWizard\ChartTypeSelector.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TablesDiagram\ChartWizard\ChartTypeSelector.Designer.cs">
+      <DependentUpon>ChartTypeSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="TablesDiagram\Helpers\LoadingHelper.cs" />
     <Compile Include="TablesDiagram\Helpers\SelectorTool.cs" />
     <Compile Include="TablesDiagram\Helpers\TablesTransfer.cs" />
+    <Compile Include="TablesDiagram\ChartWizard\ChartWizardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TablesDiagram\ChartWizard\ChartWizardForm.Designer.cs">
+      <DependentUpon>ChartWizardForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TablesDiagram\TablesDiagramComponents\FieldControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -239,6 +251,12 @@
     <EmbeddedResource Include="ServerControls\ServerStatus.resx">
       <DependentUpon>ServerStatus.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="TablesDiagram\ChartWizard\ChartTypeSelector.resx">
+      <DependentUpon>ChartTypeSelector.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TablesDiagram\ChartWizard\ChartWizardForm.resx">
+      <DependentUpon>ChartWizardForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TablesDiagram\TablesDiagramComponents\FieldControl.resx">
       <DependentUpon>FieldControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -279,6 +297,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\view_refresh %281%29.png" />
     <None Include="Resources\WrenchBtn2.png" />
     <None Include="Resources\WrenchBtn.png" />
     <None Include="Resources\view_refresh.png" />
@@ -304,6 +323,9 @@
     <None Include="Resources\folderOpen.png" />
     <None Include="Resources\BackGroundGray.bmp" />
     <None Include="Resources\FileMenuBackGround.png" />
+    <None Include="Resources\chart_bar.png" />
+    <None Include="Resources\edit_select_all %281%29.png" />
+    <None Include="Resources\gtk_refresh.png" />
     <Content Include="Resources\key.ico" />
     <None Include="Resources\Move.ico" />
     <None Include="Resources\place_table.bmp" />
@@ -319,6 +341,8 @@
     <None Include="Resources\shape_square8x8.bmp" />
     <None Include="Resources\stop1normalred.png" />
     <None Include="Resources\stsdbPic.jpg" />
+    <None Include="Resources\symbol_remove.png" />
+    <None Include="Resources\save %281%29.png" />
     <Content Include="Resources\table.ico" />
     <None Include="Resources\table1.ico" />
     <None Include="Resources\table_add.png" />
